# dggc

./: Cargo.toml
src/: actualization.rs  app.rs  chat.rs  connection.rs  conversion.rs  crossterm.rs  data.rs  display.rs  flairs.rs  history.rs  main.rs  termion.rs  ui.rs  update.rs
src/data/: inbound.rs
src/sample-data/: flairs.json  history.json  join.json  msg.json  names.json  quit.json
