[package]
name = "dggc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tokio = { version = "1.21.2", default-features = false, features = ["io-util", "rt", "io-std", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = { version = "2.3.1" }
futures-channel = "0.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
async-trait = "0.1.58"